--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
      url: /about/
    - title: "Posts"
      url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
+   - title: "Category"
+     url: /categories/
   # - title: "Sitemap"
   #   url: /sitemap/
